maybe pog, maybe arrested

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,6 @@ main: com.ankoki.olysene.Olysene
 description: '§ePlugin which provides quick and easy utilities for developers §4❤'
 author: 'Ankoki'
 api-version: 1.16
+commands:
+  olysene:
+    description: testing
